--- a/modelling/plots/prac_vs_sim_vel_step_no_payload.tex
+++ b/modelling/plots/prac_vs_sim_vel_step_no_payload.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel_sp, col sep = comma] 
         {modelling/csv/prac_vs_sim_vel_step_Simulink_2021-08-20_04_no_load_velocity_steps_wind_0.5.csv.csv};
-        \addlegendentry{$V_{N,sp}$}
+        \addlegendentry{$V_{N_{sp}}$}
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel.prac, col sep = comma] 
