--- a/modelling/plots/prac_vs_sim_theta_with_payload.tex
+++ b/modelling/plots/prac_vs_sim_theta_with_payload.tex
@@ -37,6 +37,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Payload angle comparison of simulated and practical data for Honeybee with a suspended payload}
+    \caption{Payload angle comparison of simulated and practical data for Honeybee with a suspended payload.}
     \label{fig:prac_vs_sim_theta_with_payload}
 \end{figure}
