--- a/modelling/plots/prac_vs_sim_vel_step_no_payload.tex
+++ b/modelling/plots/prac_vs_sim_vel_step_no_payload.tex
@@ -42,6 +42,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Comparison of simulated and practical data from Honeybee}
+    \caption{Comparison of simulated and practical data from Honeybee.}
     \label{fig:prac_vs_sim_vel_step_no_payload}
 \end{figure}
