--- a/modelling/plots/prac_vs_sim_vel_step_with_payload.tex
+++ b/modelling/plots/prac_vs_sim_vel_step_with_payload.tex
@@ -42,6 +42,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Velocity step comparison of simulated and practical data for Honeybee with a suspended payload}
+    \caption{Velocity step comparison of simulated and practical data for Honeybee with a suspended payload.}
     \label{fig:prac_vs_sim_vel_step_with_payload}
 \end{figure}
